[Bug #20270] Fix --parser=prism

Fixes crashes when `--parser=prism --dump=parsetree` and when reading
from stdin with `--parser=prism`.